--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>org.pitest</groupId>
     <artifactId>highwheel-parent</artifactId>
     <packaging>pom</packaging>
-    <version>0.1-SNAPSHOT</version>
+    <version>1.0</version>
     <name>highwheel-parent</name>
     <url>http://pitest.org</url>
     <description>Visualise large class and package cycles</description>
