--- a/highwheel-ant/pom.xml
+++ b/highwheel-ant/pom.xml
@@ -82,6 +82,7 @@
 								<includes>
 								    <include>org.pitest:highwheel-core</include>
 								    <include>org.pitest:highwheel-parser</include>
+								    <include>org.pitest:highwheel-model</include>
 									<include>net.sf.jung:*</include>
 									<include>org.freehep:*</include>
 								    <include>net.sourceforge.collections:*</include>
