allow pasring without collapsing inner classes

--- a/highwheel-parser/pom.xml
+++ b/highwheel-parser/pom.xml
@@ -41,9 +41,10 @@
 			<plugin>
 				<groupId>org.pitest</groupId>
 				<artifactId>pitest-maven</artifactId>
-				<version>0.30</version>
+				<version>0.32-SNAPSHOT</version>
 				<configuration>
 					<timestampedReports>false</timestampedReports>
+					<coverageThreshold>100</coverageThreshold>
 					<targetClasses>
 						<param>org.pitest.highwheel*</param>
 					</targetClasses>
