--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
         <module>highwheel-maven</module>
         <module>highwheel-ant</module>
         <module>highwheel-bytecode</module>
+        <module>highwheel-maven-verification</module>
     </modules>
 
     <!-- common dependencies used in all subprojects -->
