--- a/highwheel-maven/pom.xml
+++ b/highwheel-maven/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>highwheel-parent</artifactId>
 		<groupId>org.pitest</groupId>
-		<version>1.2-SNAPSHOT</version>
+		<version>1.2</version>
 	</parent>
 	<artifactId>highwheel-maven</artifactId>
 	<packaging>maven-plugin</packaging>
