--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.pitest</groupId>
 	<artifactId>highwheel-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>1.3-SNAPSHOT</version>
+	<version>1.2-SNAPSHOT</version>
 	<name>highwheel-parent</name>
 	<url>http://pitest.org</url>
 	<description>Visualise large class and package cycles</description>
@@ -12,8 +13,7 @@
 		<connection>scm:git:https://github.com/hcoles/highwheel.git</connection>
 		<developerConnection>scm:git:https://github.com/hcoles/highwheel.git</developerConnection>
 		<url>https://github.com/hcoles/highwheel</url>
-	  <tag>HEAD</tag>
-  </scm>
+	</scm>
 
 	<licenses>
 		<license>
