Introduce modules module:
- Put all utils in a separate module
- Implement Optional type for Java 6 compatibility
- Introduce modules and specify Module
- Introduce ModuleDependency

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,8 @@
 		<module>highwheel-ant</module>
 		<module>highwheel-bytecode</module>
 		<module>highwheel-maven-verification</module>
+        <module>highwheel-modules</module>
+        <module>highwheel-utils</module>
 	</modules>
 
 	<!-- common dependencies used in all subprojects -->
