--- a/highwheel-core/pom.xml
+++ b/highwheel-core/pom.xml
@@ -23,6 +23,11 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.pitest</groupId>
+			<artifactId>highwheel-utils</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>net.sf.jung</groupId>
 			<artifactId>jung-graph-impl</artifactId>
 			<version>2.0.1</version>
