--- a/highwheel-modules/pom.xml
+++ b/highwheel-modules/pom.xml
@@ -20,5 +20,10 @@
 			<artifactId>highwheel-utils</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>net.sf.jung</groupId>
+			<artifactId>jung-graph-impl</artifactId>
+			<version>2.0.1</version>
+		</dependency>
 	</dependencies>
 </project>
