--- a/highwheel-modules/pom.xml
+++ b/highwheel-modules/pom.xml
@@ -25,5 +25,10 @@
 			<artifactId>jung-graph-impl</artifactId>
 			<version>2.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.jparsec</groupId>
+			<artifactId>jparsec</artifactId>
+			<version>2.3</version>
+		</dependency>
 	</dependencies>
 </project>
