--- a/highwheel-modules/pom.xml
+++ b/highwheel-modules/pom.xml
@@ -17,6 +17,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.pitest</groupId>
+			<artifactId>highwheel-parser</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.pitest</groupId>
 			<artifactId>highwheel-utils</artifactId>
 			<version>${project.version}</version>
 		</dependency>
