Complete demo version of cli tool

--- a/pom.xml
+++ b/pom.xml
@@ -39,8 +39,9 @@
 		<module>highwheel-ant</module>
 		<module>highwheel-bytecode</module>
 		<module>highwheel-maven-verification</module>
-        <module>highwheel-modules</module>
-        <module>highwheel-utils</module>
+		<module>highwheel-modules</module>
+    <module>highwheel-utils</module>
+		<module>highwheel-modules-cli</module>
 	</modules>
 
 	<!-- common dependencies used in all subprojects -->
