--- a/highwheel-maven-verification/pom.xml
+++ b/highwheel-maven-verification/pom.xml
@@ -39,6 +39,11 @@
 					</execution>
 				</executions>
 			</plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-plugin-plugin</artifactId>
+        <version>3.5.1</version>
+      </plugin>
 		</plugins>
 	</build>
 	<dependencies>
@@ -70,5 +75,7 @@
 		</dependency>
 
 	</dependencies>
+
+
 </project>
 
