Create maven plugin for analysing projects. Add specification of modules.

--- a/highwheel-modules/pom.xml
+++ b/highwheel-modules/pom.xml
@@ -36,4 +36,22 @@
 			<version>3.0</version>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.pitest</groupId>
+				<artifactId>highwheel-modules-maven</artifactId>
+				<version>${project.version}</version>
+				<executions>
+					<execution>
+						<phase>verify</phase>
+						<goals>
+							<goal>analyse</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
