--- a/highwheel-bytecode/pom.xml
+++ b/highwheel-bytecode/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>highwheel-parent</artifactId>
 		<groupId>org.pitest</groupId>
-		<version>1.3</version>
+		<version>1.4-SNAPSHOT</version>
 	</parent>
 	<artifactId>highwheel-bytecode</artifactId>
 	<packaging>maven-plugin</packaging>
