--- a/highwheel-maven-verification/pom.xml
+++ b/highwheel-maven-verification/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>highwheel-parent</artifactId>
 		<groupId>org.pitest</groupId>
-		<version>1.4-SNAPSHOT</version>
+		<version>1.4</version>
 	</parent>
 	<artifactId>highwheel-maven-verification</artifactId>
 	<packaging>jar</packaging>
