--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.7.0</version>
+					<version>3.8.1</version>
 					<configuration>
 						<source>1.8</source>
 						<target>1.8</target>
@@ -189,9 +189,9 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<hamcrest.version>1.3.RC2</hamcrest.version>
+		<hamcrest.version>1.3</hamcrest.version>
 		<junit.version>4.12</junit.version>
-		<surefire.version>2.21.0</surefire.version>
+		<surefire.version>2.22.2</surefire.version>
 	</properties>
 
 </project>
