--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>org.pitest</groupId>
 	<artifactId>highwheel-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>1.6</version>
+	<version>1.7-SNAPSHOT</version>
 	<name>highwheel-parent</name>
 	<url>http://pitest.org</url>
 	<description>Visualise large class and package cycles</description>
@@ -12,7 +12,7 @@
 		<connection>scm:git:https://github.com/hcoles/highwheel.git</connection>
 		<developerConnection>scm:git:https://github.com/hcoles/highwheel.git</developerConnection>
 		<url>https://github.com/hcoles/highwheel</url>
-	  <tag>highwheel-parent-1.6</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 	<licenses>
