--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,38 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-javadoc-plugin</artifactId>
-					<version>3.0.0</version>
+					<version>3.2.0</version>
+					<configuration>
+						<source>8</source>
+						<!-- javadoc breaks on maven plugin tags -->
+						<tags>
+							<tag>
+								<name>goal</name>
+								<placement>a</placement>
+								<head>Goal:</head>
+							</tag>
+							<tag>
+								<name>phase</name>
+								<placement>a</placement>
+								<head>Phase:</head>
+							</tag>
+							<tag>
+								<name>threadSafe</name>
+								<placement>a</placement>
+								<head>Thread Safe:</head>
+							</tag>
+							<tag>
+								<name>requiresDependencyResolution</name>
+								<placement>a</placement>
+								<head>Requires Dependency Resolution:</head>
+							</tag>
+							<tag>
+								<name>requiresProject</name>
+								<placement>a</placement>
+								<head>Requires Project:</head>
+							</tag>
+						</tags>
+					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
