--- a/highwheel-bytecode/pom.xml
+++ b/highwheel-bytecode/pom.xml
@@ -76,7 +76,7 @@
 		<dependency>
 			<groupId>org.ow2.asm</groupId>
 			<artifactId>asm-util</artifactId>
-			<version>8.0.1</version>
+			<version>${asm.version}</version>
 		</dependency>
 
 	</dependencies>
