--- a/highwheel-parser/pom.xml
+++ b/highwheel-parser/pom.xml
@@ -64,7 +64,7 @@
 		<dependency>
 			<groupId>org.ow2.asm</groupId>
 			<artifactId>asm</artifactId>
-			<version>7.1</version>
+			<version>${asm.version}</version>
 		</dependency>
 		
 	</dependencies>
