--- a/pom.xml
+++ b/pom.xml
@@ -223,6 +223,7 @@
 		<hamcrest.version>1.3</hamcrest.version>
 		<junit.version>4.12</junit.version>
 		<surefire.version>2.22.2</surefire.version>
+		<asm.version>8.0.1</asm.version>
 	</properties>
 
 </project>
