--- a/highwheel-ant/pom.xml
+++ b/highwheel-ant/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>highwheel-parent</artifactId>
 		<groupId>org.pitest</groupId>
-		<version>1.7</version>
+		<version>1.8-SNAPSHOT</version>
 	</parent>
 	<artifactId>highwheel-ant</artifactId>
 	<name>highwheel-ant</name>
