--- a/highwheel-parser/pom.xml
+++ b/highwheel-parser/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>highwheel-parent</artifactId>
 		<groupId>org.pitest</groupId>
-		<version>1.7</version>
+		<version>1.8-SNAPSHOT</version>
 	</parent>
 	<artifactId>highwheel-parser</artifactId>
 	<packaging>jar</packaging>
