Improve MAVEN build Performance

--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,9 @@
 					</dependencies>
 					<configuration>
 						<testNGArtifactName>none:none</testNGArtifactName>
+						<parallel>classes</parallel>
+						<useUnlimitedThreads>true</useUnlimitedThreads>
+
 					</configuration>
 				</plugin>
 				<plugin>
